add package.json description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "client",
+  "description": "Streaming platform for local Malaysian",
   "version": "0.1.0",
   "private": true,
+  "author": "Rubiest Development",
+  "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
